[Krishna S Lal]: Modified and Updated My Contact app